# inbox-cleaner

./: .gitignore  AGENTS.md  CLAUDE.md  CLEANUP_WORKFLOW.md  PLAN.md  README.md  TODO.md  analyze_emails.py  cleanup_emails.py  config.yaml  config.yaml.example  debug_gmail.py  demo.py  diagnose_issues.py  diagnose_oauth.py  direct_test.py  manual_cleanup_guide.py  pyproject.toml  pytest.ini  quick_cleanup.py  real_demo.py  requirements.txt  retention.md  run.sh  setup_credentials.py  setup_headless.sh  setup_oauth_wizard.py  smart_demo.py  spam_rules.json  unsubscribe_and_block.py  usps_retention_manager.py
.claude/skills/python-architect/: SKILL.md
.claude/skills/security-architect/: SKILL.md
inbox_cleaner/: __init__.py  ai_analyzer.py  analysis.py  analysis_broken.py  auth.py  cleanup_engine.py  cli.py  database.py  deletion.py  extractor.py  filter_analytics.py  retention.py  retention_manager.py  spam_filters.py  spam_rules.py  sync.py  unsubscribe_engine.py  web.py
inbox_cleaner/templates/: analysis.html  dashboard.html  emails.html  search.html  spam_rules.html
reference/: automate_filter_cleanup.py  backup_and_recreate_filters.py
tests/: __init__.py  conftest.py  test_analysis.py  test_auth.py  test_auth_invalid_client.py  test_auth_web_interface.py  test_cli.py  test_database.py  test_deletion.py  test_extractor.py  test_filter_analytics.py  test_integration.py  test_mark_read_operations.py  test_retention.py  test_retention_manager.py  test_spam_filters.py  test_spam_filters_unit.py  test_spam_rules.py  test_sync.py  test_unsubscribe_engine.py  test_web.py
